// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CandidateGrid > renders correctly in grid view 1`] = `
<div>
  <div
    class="candidate-grid"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <h3
          class="text-lg font-medium text-foreground"
        >
          generate.batchComplete
        </h3>
        <span
          class="text-sm text-muted-foreground"
        >
          (
          1
           
          generate.successful
          )
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex items-center gap-1 p-1 rounded-lg bg-muted/50"
        >
          <button
            aria-label="Grid view"
            class="p-1.5 rounded-md transition-colors bg-background shadow-sm"
            type="button"
          >
            <svg
              class="w-4 h-4 text-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="List view"
            class="p-1.5 rounded-md transition-colors hover:bg-muted"
            type="button"
          >
            <svg
              class="w-4 h-4 text-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="gap-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
    >
      <div
        aria-pressed="false"
        class="
        candidate-card candidate-card--grid
        rounded-xl border overflow-hidden cursor-pointer
        transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
        border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
      "
        role="button"
        tabindex="0"
      >
        <div
          class="aspect-video bg-muted flex items-center justify-center relative"
        >
          <img
            alt="Candidate 1"
            class="w-full h-full object-cover"
            src="base64data"
          />
          <div
            class="
          absolute top-2 left-2 px-2 py-0.5 rounded-full text-xs font-medium
          bg-status-success/90 text-white
        "
          >
            #
            1
          </div>
        </div>
        <div
          class="p-3"
        >
          <div
            class="flex items-center justify-between"
          >
            <div
              class="flex items-center gap-1"
            >
              <button
                class="p-1.5 rounded-lg hover:bg-muted transition-colors"
                title="refine.title"
              >
                <svg
                  class="w-4 h-4 text-muted-foreground"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </button>
              <button
                class="p-1.5 rounded-lg hover:bg-muted transition-colors"
                title="export.title"
              >
                <svg
                  class="w-4 h-4 text-muted-foreground"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
            <button
              class="p-1.5 rounded-lg hover:bg-muted transition-colors"
              title="common.delete"
            >
              <svg
                class="w-4 h-4 text-muted-foreground"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-pressed="false"
        class="
        candidate-card candidate-card--grid
        rounded-xl border overflow-hidden cursor-pointer
        transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
        border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
      "
        role="button"
        tabindex="0"
      >
        <div
          class="aspect-video bg-muted flex items-center justify-center relative"
        >
          <div
            class="flex flex-col items-center gap-2 text-muted-foreground"
          >
            <div
              class="w-4 h-4 border-2 border-primary border-t-transparent rounded-full animate-spin"
            />
            <span
              class="text-xs"
            >
              generate.statusRunning
            </span>
          </div>
          <div
            class="
          absolute top-2 left-2 px-2 py-0.5 rounded-full text-xs font-medium
          bg-status-running/90 text-white
        "
          >
            #
            2
          </div>
        </div>
        <div
          class="p-3"
        />
      </div>
      <div
        aria-pressed="false"
        class="
        candidate-card candidate-card--grid
        rounded-xl border overflow-hidden cursor-pointer
        transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
        border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
      "
        role="button"
        tabindex="0"
      >
        <div
          class="aspect-video bg-muted flex items-center justify-center relative"
        >
          <div
            class="flex flex-col items-center gap-2 text-muted-foreground"
          >
            <svg
              class="w-4 h-4 text-status-error"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            <span
              class="text-xs"
            >
              generate.statusError
            </span>
          </div>
          <div
            class="
          absolute top-2 left-2 px-2 py-0.5 rounded-full text-xs font-medium
          bg-status-error/90 text-white
        "
          >
            #
            3
          </div>
        </div>
        <div
          class="p-3"
        >
          <p
            class="text-xs text-status-error mb-2 line-clamp-2"
          >
            Generation failed
          </p>
        </div>
      </div>
      <div
        aria-pressed="false"
        class="
        candidate-card candidate-card--grid
        rounded-xl border overflow-hidden cursor-pointer
        transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
        border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
      "
        role="button"
        tabindex="0"
      >
        <div
          class="aspect-video bg-muted flex items-center justify-center relative"
        >
          <div
            class="flex flex-col items-center gap-2 text-muted-foreground"
          >
            <div
              class="w-4 h-4 rounded-full border-2 border-muted-foreground/30"
            />
            <span
              class="text-xs"
            >
              generate.statusPending
            </span>
          </div>
          <div
            class="
          absolute top-2 left-2 px-2 py-0.5 rounded-full text-xs font-medium
          bg-muted-foreground/50 text-white
        "
          >
            #
            4
          </div>
        </div>
        <div
          class="p-3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`CandidateGrid > renders correctly in list view 1`] = `
<div>
  <div
    class="candidate-grid"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <h3
          class="text-lg font-medium text-foreground"
        >
          generate.batchComplete
        </h3>
        <span
          class="text-sm text-muted-foreground"
        >
          (
          1
           
          generate.successful
          )
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex items-center gap-1 p-1 rounded-lg bg-muted/50"
        >
          <button
            aria-label="Grid view"
            class="p-1.5 rounded-md transition-colors hover:bg-muted"
            type="button"
          >
            <svg
              class="w-4 h-4 text-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="List view"
            class="p-1.5 rounded-md transition-colors bg-background shadow-sm"
            type="button"
          >
            <svg
              class="w-4 h-4 text-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="gap-4 flex flex-col"
    >
      <div
        aria-pressed="false"
        class="
          candidate-card candidate-card--list
          flex items-center gap-4 p-4 rounded-xl border cursor-pointer
          transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
          border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
        "
        role="button"
        tabindex="0"
      >
        <div
          class="w-16 h-16 rounded-lg bg-muted flex items-center justify-center flex-shrink-0 overflow-hidden"
        >
          <img
            alt="Candidate 1"
            class="w-full h-full object-cover"
            src="base64data"
          />
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-medium text-foreground"
            >
              generate.candidate {"number":1}
            </span>
            <span
              class="
              text-xs px-2 py-0.5 rounded-full
              bg-status-success/10 text-status-success
            "
            >
              generate.statusComplete
            </span>
          </div>
          <div
            class="flex items-center gap-3 mt-1 text-xs text-muted-foreground"
          >
            <span>
              gpt-4
            </span>
            <span>
              5
              s
            </span>
          </div>
        </div>
        <div
          class="flex items-center gap-1"
        >
          <button
            class="p-2 rounded-lg hover:bg-muted transition-colors"
            title="refine.title"
          >
            <svg
              class="w-4 h-4 text-muted-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            class="p-2 rounded-lg hover:bg-muted transition-colors"
            title="export.title"
          >
            <svg
              class="w-4 h-4 text-muted-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            class="p-2 rounded-lg hover:bg-muted transition-colors"
            title="common.delete"
          >
            <svg
              class="w-4 h-4 text-muted-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-pressed="false"
        class="
          candidate-card candidate-card--list
          flex items-center gap-4 p-4 rounded-xl border cursor-pointer
          transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
          border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
        "
        role="button"
        tabindex="0"
      >
        <div
          class="w-16 h-16 rounded-lg bg-muted flex items-center justify-center flex-shrink-0 overflow-hidden"
        >
          <div
            class="text-muted-foreground"
          >
            <div
              class="w-4 h-4 border-2 border-primary border-t-transparent rounded-full animate-spin"
            />
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-medium text-foreground"
            >
              generate.candidate {"number":2}
            </span>
            <span
              class="
              text-xs px-2 py-0.5 rounded-full
              bg-status-running/10 text-status-running
            "
            >
              generate.statusRunning
            </span>
          </div>
          <div
            class="flex items-center gap-3 mt-1 text-xs text-muted-foreground"
          >
            <span>
              gpt-4
            </span>
          </div>
        </div>
      </div>
      <div
        aria-pressed="false"
        class="
          candidate-card candidate-card--list
          flex items-center gap-4 p-4 rounded-xl border cursor-pointer
          transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
          border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
        "
        role="button"
        tabindex="0"
      >
        <div
          class="w-16 h-16 rounded-lg bg-muted flex items-center justify-center flex-shrink-0 overflow-hidden"
        >
          <div
            class="text-muted-foreground"
          >
            <svg
              class="w-4 h-4 text-status-error"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-medium text-foreground"
            >
              generate.candidate {"number":3}
            </span>
            <span
              class="
              text-xs px-2 py-0.5 rounded-full
              bg-status-error/10 text-status-error
            "
            >
              generate.statusError
            </span>
          </div>
          <p
            class="text-xs text-status-error mt-1 truncate"
          >
            Generation failed
          </p>
        </div>
      </div>
      <div
        aria-pressed="false"
        class="
          candidate-card candidate-card--list
          flex items-center gap-4 p-4 rounded-xl border cursor-pointer
          transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
          border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
        "
        role="button"
        tabindex="0"
      >
        <div
          class="w-16 h-16 rounded-lg bg-muted flex items-center justify-center flex-shrink-0 overflow-hidden"
        >
          <div
            class="text-muted-foreground"
          >
            <div
              class="w-4 h-4 rounded-full border-2 border-muted-foreground/30"
            />
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-medium text-foreground"
            >
              generate.candidate {"number":4}
            </span>
            <span
              class="
              text-xs px-2 py-0.5 rounded-full
              bg-muted text-muted-foreground
            "
            >
              generate.statusPending
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CandidateGrid > renders correctly in multi-select mode 1`] = `
<div>
  <div
    class="candidate-grid"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <h3
          class="text-lg font-medium text-foreground"
        >
          generate.batchComplete
        </h3>
        <span
          class="text-sm text-muted-foreground"
        >
          (
          1
           
          generate.successful
          )
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex items-center gap-1 p-1 rounded-lg bg-muted/50"
        >
          <button
            aria-label="Grid view"
            class="p-1.5 rounded-md transition-colors bg-background shadow-sm"
            type="button"
          >
            <svg
              class="w-4 h-4 text-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="List view"
            class="p-1.5 rounded-md transition-colors hover:bg-muted"
            type="button"
          >
            <svg
              class="w-4 h-4 text-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="mb-4 text-sm text-muted-foreground"
    >
      <span>
        generate.selectToCompare
      </span>
    </div>
    <div
      class="gap-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
    >
      <div
        aria-pressed="false"
        class="
        candidate-card candidate-card--grid
        rounded-xl border overflow-hidden cursor-pointer
        transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
        border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
      "
        role="button"
        tabindex="0"
      >
        <div
          class="aspect-video bg-muted flex items-center justify-center relative"
        >
          <img
            alt="Candidate 1"
            class="w-full h-full object-cover"
            src="base64data"
          />
          <button
            aria-label="Select"
            class="absolute top-2 right-2 w-6 h-6 rounded-md flex items-center justify-center transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 bg-background/80 text-muted-foreground border border-border/50"
            type="button"
          >
            <div
              class="w-3 h-3"
            />
          </button>
          <div
            class="
          absolute top-2 left-2 px-2 py-0.5 rounded-full text-xs font-medium
          bg-status-success/90 text-white
        "
          >
            #
            1
          </div>
        </div>
        <div
          class="p-3"
        >
          <div
            class="flex items-center justify-between"
          >
            <div
              class="flex items-center gap-1"
            >
              <button
                class="p-1.5 rounded-lg hover:bg-muted transition-colors"
                title="refine.title"
              >
                <svg
                  class="w-4 h-4 text-muted-foreground"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </button>
              <button
                class="p-1.5 rounded-lg hover:bg-muted transition-colors"
                title="export.title"
              >
                <svg
                  class="w-4 h-4 text-muted-foreground"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
            <button
              class="p-1.5 rounded-lg hover:bg-muted transition-colors"
              title="common.delete"
            >
              <svg
                class="w-4 h-4 text-muted-foreground"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-pressed="false"
        class="
        candidate-card candidate-card--grid
        rounded-xl border overflow-hidden cursor-pointer
        transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
        border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
      "
        role="button"
        tabindex="0"
      >
        <div
          class="aspect-video bg-muted flex items-center justify-center relative"
        >
          <div
            class="flex flex-col items-center gap-2 text-muted-foreground"
          >
            <div
              class="w-4 h-4 border-2 border-primary border-t-transparent rounded-full animate-spin"
            />
            <span
              class="text-xs"
            >
              generate.statusRunning
            </span>
          </div>
          <button
            aria-label="Select"
            class="absolute top-2 right-2 w-6 h-6 rounded-md flex items-center justify-center transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 bg-background/80 text-muted-foreground border border-border/50"
            type="button"
          >
            <div
              class="w-3 h-3"
            />
          </button>
          <div
            class="
          absolute top-2 left-2 px-2 py-0.5 rounded-full text-xs font-medium
          bg-status-running/90 text-white
        "
          >
            #
            2
          </div>
        </div>
        <div
          class="p-3"
        />
      </div>
      <div
        aria-pressed="false"
        class="
        candidate-card candidate-card--grid
        rounded-xl border overflow-hidden cursor-pointer
        transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
        border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
      "
        role="button"
        tabindex="0"
      >
        <div
          class="aspect-video bg-muted flex items-center justify-center relative"
        >
          <div
            class="flex flex-col items-center gap-2 text-muted-foreground"
          >
            <svg
              class="w-4 h-4 text-status-error"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            <span
              class="text-xs"
            >
              generate.statusError
            </span>
          </div>
          <button
            aria-label="Select"
            class="absolute top-2 right-2 w-6 h-6 rounded-md flex items-center justify-center transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 bg-background/80 text-muted-foreground border border-border/50"
            type="button"
          >
            <div
              class="w-3 h-3"
            />
          </button>
          <div
            class="
          absolute top-2 left-2 px-2 py-0.5 rounded-full text-xs font-medium
          bg-status-error/90 text-white
        "
          >
            #
            3
          </div>
        </div>
        <div
          class="p-3"
        >
          <p
            class="text-xs text-status-error mb-2 line-clamp-2"
          >
            Generation failed
          </p>
        </div>
      </div>
      <div
        aria-pressed="false"
        class="
        candidate-card candidate-card--grid
        rounded-xl border overflow-hidden cursor-pointer
        transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
        border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
      "
        role="button"
        tabindex="0"
      >
        <div
          class="aspect-video bg-muted flex items-center justify-center relative"
        >
          <div
            class="flex flex-col items-center gap-2 text-muted-foreground"
          >
            <div
              class="w-4 h-4 rounded-full border-2 border-muted-foreground/30"
            />
            <span
              class="text-xs"
            >
              generate.statusPending
            </span>
          </div>
          <button
            aria-label="Select"
            class="absolute top-2 right-2 w-6 h-6 rounded-md flex items-center justify-center transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 bg-background/80 text-muted-foreground border border-border/50"
            type="button"
          >
            <div
              class="w-3 h-3"
            />
          </button>
          <div
            class="
          absolute top-2 left-2 px-2 py-0.5 rounded-full text-xs font-medium
          bg-muted-foreground/50 text-white
        "
          >
            #
            4
          </div>
        </div>
        <div
          class="p-3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`CandidateGrid > renders correctly with empty candidates 1`] = `
<div>
  <div
    class="candidate-grid"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <h3
          class="text-lg font-medium text-foreground"
        >
          generate.batchComplete
        </h3>
        <span
          class="text-sm text-muted-foreground"
        >
          (
          0
           
          generate.successful
          )
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex items-center gap-1 p-1 rounded-lg bg-muted/50"
        >
          <button
            aria-label="Grid view"
            class="p-1.5 rounded-md transition-colors bg-background shadow-sm"
            type="button"
          >
            <svg
              class="w-4 h-4 text-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="List view"
            class="p-1.5 rounded-md transition-colors hover:bg-muted"
            type="button"
          >
            <svg
              class="w-4 h-4 text-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="gap-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
    />
  </div>
</div>
`;

exports[`CandidateGrid > renders correctly with selected candidate 1`] = `
<div>
  <div
    class="candidate-grid"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <h3
          class="text-lg font-medium text-foreground"
        >
          generate.batchComplete
        </h3>
        <span
          class="text-sm text-muted-foreground"
        >
          (
          1
           
          generate.successful
          )
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex items-center gap-1 p-1 rounded-lg bg-muted/50"
        >
          <button
            aria-label="Grid view"
            class="p-1.5 rounded-md transition-colors bg-background shadow-sm"
            type="button"
          >
            <svg
              class="w-4 h-4 text-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="List view"
            class="p-1.5 rounded-md transition-colors hover:bg-muted"
            type="button"
          >
            <svg
              class="w-4 h-4 text-foreground"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="gap-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
    >
      <div
        aria-pressed="true"
        class="
        candidate-card candidate-card--grid
        rounded-xl border overflow-hidden cursor-pointer
        transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
        border-primary bg-primary/5 shadow-sm ring-2 ring-primary/20
      "
        role="button"
        tabindex="0"
      >
        <div
          class="aspect-video bg-muted flex items-center justify-center relative"
        >
          <img
            alt="Candidate 1"
            class="w-full h-full object-cover"
            src="base64data"
          />
          <div
            class="absolute top-2 right-2 w-6 h-6 rounded-full bg-primary text-primary-foreground flex items-center justify-center"
          >
            <svg
              class="w-4 h-4"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M5 13l4 4L19 7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="
          absolute top-2 left-2 px-2 py-0.5 rounded-full text-xs font-medium
          bg-status-success/90 text-white
        "
          >
            #
            1
          </div>
        </div>
        <div
          class="p-3"
        >
          <div
            class="flex items-center justify-between"
          >
            <div
              class="flex items-center gap-1"
            >
              <button
                class="p-1.5 rounded-lg hover:bg-muted transition-colors"
                title="refine.title"
              >
                <svg
                  class="w-4 h-4 text-muted-foreground"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </button>
              <button
                class="p-1.5 rounded-lg hover:bg-muted transition-colors"
                title="export.title"
              >
                <svg
                  class="w-4 h-4 text-muted-foreground"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
            <button
              class="p-1.5 rounded-lg hover:bg-muted transition-colors"
              title="common.delete"
            >
              <svg
                class="w-4 h-4 text-muted-foreground"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-pressed="false"
        class="
        candidate-card candidate-card--grid
        rounded-xl border overflow-hidden cursor-pointer
        transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
        border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
      "
        role="button"
        tabindex="0"
      >
        <div
          class="aspect-video bg-muted flex items-center justify-center relative"
        >
          <div
            class="flex flex-col items-center gap-2 text-muted-foreground"
          >
            <div
              class="w-4 h-4 border-2 border-primary border-t-transparent rounded-full animate-spin"
            />
            <span
              class="text-xs"
            >
              generate.statusRunning
            </span>
          </div>
          <div
            class="
          absolute top-2 left-2 px-2 py-0.5 rounded-full text-xs font-medium
          bg-status-running/90 text-white
        "
          >
            #
            2
          </div>
        </div>
        <div
          class="p-3"
        />
      </div>
      <div
        aria-pressed="false"
        class="
        candidate-card candidate-card--grid
        rounded-xl border overflow-hidden cursor-pointer
        transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
        border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
      "
        role="button"
        tabindex="0"
      >
        <div
          class="aspect-video bg-muted flex items-center justify-center relative"
        >
          <div
            class="flex flex-col items-center gap-2 text-muted-foreground"
          >
            <svg
              class="w-4 h-4 text-status-error"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            <span
              class="text-xs"
            >
              generate.statusError
            </span>
          </div>
          <div
            class="
          absolute top-2 left-2 px-2 py-0.5 rounded-full text-xs font-medium
          bg-status-error/90 text-white
        "
          >
            #
            3
          </div>
        </div>
        <div
          class="p-3"
        >
          <p
            class="text-xs text-status-error mb-2 line-clamp-2"
          >
            Generation failed
          </p>
        </div>
      </div>
      <div
        aria-pressed="false"
        class="
        candidate-card candidate-card--grid
        rounded-xl border overflow-hidden cursor-pointer
        transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50
        border-border/50 bg-card/50 hover:border-primary/30 hover:bg-primary/5
      "
        role="button"
        tabindex="0"
      >
        <div
          class="aspect-video bg-muted flex items-center justify-center relative"
        >
          <div
            class="flex flex-col items-center gap-2 text-muted-foreground"
          >
            <div
              class="w-4 h-4 rounded-full border-2 border-muted-foreground/30"
            />
            <span
              class="text-xs"
            >
              generate.statusPending
            </span>
          </div>
          <div
            class="
          absolute top-2 left-2 px-2 py-0.5 rounded-full text-xs font-medium
          bg-muted-foreground/50 text-white
        "
          >
            #
            4
          </div>
        </div>
        <div
          class="p-3"
        />
      </div>
    </div>
  </div>
</div>
`;
